--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.2.9",
     "material-table": "^1.69.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
